# tinyagent

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
tests/: conftest.py  test_claude.py  test_gemini.py  test_gpt.py  test_tool.py
tinyagent/: __init__.py  base.py  schema.py  tools.py  utils.py
tinyagent/agent/: __init__.py  base.py  schema.py  tools.py  utils.py
tinyagent/agent/claude/: agent.py  client.py
tinyagent/agent/gpt/: agent.py  client.py
tinyagent/claude/: agent.py  client.py
tinyagent/common/: __init__.py  event.py  time.py
tinyagent/gpt/: agent.py  client.py  schema.py
tinyagent/llm/claude/: agent.py  schema.py
tinyagent/llm/gemini/: agent.py  client.py  schema.py
tinyagent/llm/gpt/: agent.py
tinyagent/tools/: calculator.py  current_time.py  tavily.py  tool.py
