[tool.poetry]
name = "tinyagent"
version = "0.1.12"
description = ""
authors = ["y-lan <lanyuyang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
fire = "^0.6.0"


[tool.poetry.group.dev.dependencies]
wheel = "^0.44.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
